left bar collapse styling fix

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -414,9 +414,17 @@ input[readonly] {
 }
 
 .left-bar-item {
-	display: block;
+	display: flex;
 	border: 0;
 	overflow: hidden;
+}
+
+.left-bar-item-body {
+	position: relative;
+	display: inline-block;
+	overflow-x: hidden;
+	width: calc(100% - 40px);
+	white-space: nowrap;
 }
 
 .left-bar-item-doc {
@@ -447,8 +455,9 @@ input[readonly] {
 }
 
 .left-bar-group-caret {
-	float: right;
-	margin-right: 20px;
+	display: inline-block;
+	position: absolute;
+	right: 11px;
 }
 
 .left-bar-tabs-header {
